src/objects/Account_Eligible_RMU_Fleet_Asset__c/Account_Eligible_RMU_Fleet_Asset__c.object-meta.xml
<CustomObject>
    <label>Eligible Offering Fleet Assets</label>
    <nameField>
        <displayFormat>AERFA-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Offering Fleet Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>