src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/AER_Update__c.field-meta.xml
<CustomField>
    <fullName>AER_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AER Update</label>
    <type>Checkbox</type>
</CustomField>