src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/Aircraft_Count__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Count__c</fullName>
    <label>Aircraft Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>