src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/Aircraft_Manager__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Manager__c</fullName>
    <formula>Aircraft__r.Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Manager</label>
    <type>Text</type>
</CustomField>