src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/Aircraft_Tail_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Tail_Number__c</fullName>
    <formula>Aircraft__r.Tail_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Tail Number</label>
    <type>Text</type>
</CustomField>