src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/RMU_Dealer_Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>RMU_Dealer_Extended_Price__c</fullName>
    <formula>if( text( Account_Eligible_RMU__r.Status__c ) &lt;&gt; &apos;Disqualified&apos;,
 RMU_Product_Ratio__c 
 *
 RMU_Dealer_Price__c  
 * 
 Aircraft_Open_Count__c,
 0
)</formula>
    <label>Offering Dealer Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>