src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/RMU_Dealer_Work_Ext_Net__c.field-meta.xml
<CustomField>
    <fullName>RMU_Dealer_Work_Ext_Net__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offering Dealer Work Ext Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>