src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/RMU_Honeywell_Extended_Price_Net__c.field-meta.xml
<CustomField>
    <fullName>RMU_Honeywell_Extended_Price_Net__c</fullName>
    <formula>RMU_Honeywell_Extended_Price__c * RMU_Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offering Honeywell Extended Price Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>