src/objects/Account_Eligible_RMU_Fleet_Asset__c/fields/RMU_Product_Ratio__c.field-meta.xml
<CustomField>
    <fullName>RMU_Product_Ratio__c</fullName>
    <formula>if( or( isnull( RMU_Platform__r.RMU_Platform_Product_Ratio__c ) , RMU_Platform__r.RMU_Platform_Product_Ratio__c = 0 ) , 
 IF( RMU_Platform__r.RMU_VALUE__r.RMU_Product_Ratio__c = 0, 
 1, 
 RMU_Platform__r.RMU_VALUE__r.RMU_Product_Ratio__c 
 ), 
 RMU_Platform__r.RMU_Platform_Product_Ratio__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offering Product Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>