src/objects/Account_Eligible_RMU_Fleet_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AER_Update__c</columns>
    <columns>Aircraft__c</columns>
    <columns>RMU__c</columns>
    <columns>Aircraft_Count__c</columns>
    <columns>Aircraft_Installed_Count__c</columns>
    <columns>RMU_Dealer_Work_Ext__c</columns>
    <columns>RMU_Dealer_Extended_Price__c</columns>
    <columns>RMU_Flyaway_Work_Ext__c</columns>
    <columns>RMU_Flyaway_Extended_Price__c</columns>
    <columns>RMU_Honeywell_Work_Ext__c</columns>
    <columns>RMU_Honeywell_Extended_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>