src/objects/Account_Eligible_RMU_Fleet_Asset__c/listViews/Jetwave.listView-meta.xml
<ListView>
    <fullName>Jetwave</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Aircraft__c</columns>
    <columns>RMU__c</columns>
    <columns>Aircraft_Count__c</columns>
    <columns>Aircraft_Installed_Count__c</columns>
    <columns>RMU_Dealer_Work_Ext__c</columns>
    <columns>RMU_Dealer_Extended_Price__c</columns>
    <columns>RMU_Flyaway_Work_Ext__c</columns>
    <columns>RMU_Flyaway_Extended_Price__c</columns>
    <columns>RMU_Honeywell_Work_Ext__c</columns>
    <columns>RMU_Honeywell_Extended_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Aircraft_Model__c</field>
        <operation>contains</operation>
        <value>C-130</value>
    </filters>
    <filters>
        <field>RMU__c</field>
        <operation>contains</operation>
        <value>Jetwave</value>
    </filters>
    <label>Jetwave</label>
    <language>en_US</language>
</ListView>